--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "webpack-dev-middleware": "^1.10.1"
   },
   "dependencies": {
+    "dotenv": "^5.0.1",
+    "knex": "^0.14.4",
+    "pg": "^7.4.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.1"
