--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "webpack-dev-middleware": "^1.10.1"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.1"
