--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.10",
     "express": "^4.15.2",
     "rimraf": "^2.6.1",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
     "webpack": "^2.3.3",
     "webpack-dev-middleware": "^1.10.1"
   },
   "dependencies": {
     "dotenv": "^5.0.1",
     "knex": "^0.14.4",
+    "node-sass": "^4.7.2",
     "pg": "^7.4.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
