--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^4.0.0",
     "dotenv": "^5.0.1",
     "knex": "^0.14.4",
+    "knex-logger": "^0.1.0",
     "node-sass": "^4.7.2",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
