--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webpack-dev-middleware": "^1.10.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
     "dotenv": "^5.0.1",
@@ -34,12 +35,10 @@
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "pg": "^7.4.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-router-dom": "^4.1.1",
-    "reactstrap": "^5.0.0-beta.2",
+    "psql-api": "^0.9.11",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "reactstrap": "^5.0.0-beta.2"
   }
 }
