--- a/package.json
+++ b/package.json
@@ -34,12 +34,10 @@
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "pg": "^7.4.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-router-dom": "^4.1.1",
-    "reactstrap": "^5.0.0-beta.2",
     "react": "^15.5.4",
+    "react-bootstrap-slider": "^2.1.3",
     "react-dom": "^15.5.4",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "reactstrap": "^5.0.0-beta.2"
   }
 }
