--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "pg": "^7.4.1",
     "psql-api": "^0.9.11",
     "react": "^15.5.4",
-    "react-bootstrap-slider": "^2.1.3",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.1",
+    "react-slider": "^0.11.0",
     "reactstrap": "^5.0.0-beta.2"
   }
 }
