--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^15.5.4",
     "react-bootstrap-slider": "^2.1.3",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.1.1",
     "reactstrap": "^5.0.0-beta.2"
   }
