--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
+    "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^5.0.1",
     "knex": "^0.14.4",
     "knex-logger": "^0.1.0",
