--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^4.0.0",
     "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^5.0.1",
+    "fbgraph": "^1.4.1",
     "knex": "^0.14.4",
     "knex-logger": "^0.1.0",
     "node-sass": "^4.7.2",
