--- a/chat_server/package.json
+++ b/chat_server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "random-color": "^1.0.1",
     "uuid-v4": "^0.1.0",
     "ws": "^5.0.0"
   }
