--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^5.0.1",
     "fbgraph": "^1.4.1",
+    "jquery": "^3.3.1",
     "knex": "^0.14.4",
     "knex-logger": "^0.1.0",
     "node-sass": "^4.7.2",
@@ -42,6 +43,7 @@
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.1.1",
-    "reactstrap": "^5.0.0-beta.2"
+    "reactstrap": "^5.0.0-beta.2",
+    "ws": "^5.0.0"
   }
 }
