added alert every time user click on add to user likes

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.1.1",
+    "react-s-alert": "^1.4.1",
     "reactstrap": "^5.0.0-beta.2",
     "ws": "^5.0.0"
   }
